--- a/index.html
+++ b/index.html
@@ -1,58 +1,90 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Marc Wanjeru — IT Systems & Cybersecurity Specialist</title>
+  <meta name="description" content="Marc Wanjeru — IT Systems & Cybersecurity Specialist based in Kampala, Uganda. Expert in Microsoft 365, Kaspersky, Sophos, network infrastructure & endpoint security."/>
+
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛡️</text></svg>">
 
   <style>
     :root {
-      --bg: #0a0a0a;
-      --surface: #111111;
-      --card: #1c1c1c;
-      --gray-dark: #252525;
-      --gray-mid: #363636;
-      --accent: #00d4c0;          /* keeping your original cyan-teal for active state */
-      --text: #eae7d9;
-      --text-muted: #c0b8a8;
-      --shadow: 0 10px 40px rgba(0,0,0,0.65);
+      --bg: #0f0f0f;
+      --sidebar: #141414;
+      --card: rgba(30,30,30,0.85);
+      --border: rgba(255,255,255,0.06);
+      --text: #e0e0e0;
+      --muted: #a0a0a0;
+      --accent: #00ff9d;     /* exact green from screenshot */
+      --accent-glow: rgba(0,255,157,0.18);
+      --blur: blur(16px);
       --radius: 14px;
+      --shadow: 0 10px 40px rgba(0,0,0,0.7);
+      --sidebar-width: 280px;
     }
 
     * { margin:0; padding:0; box-sizing:border-box; }
     body {
-      font-family: system-ui, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
       overflow-x: hidden;
     }
 
-    /* ── Sidebar ── */
+    /* ── Vertical Sidebar ── */
     .sidebar {
       position: fixed;
       left: 0;
       top: 0;
       bottom: 0;
-      width: 280px;
-      background: rgba(17,17,17,0.92);
-      backdrop-filter: blur(10px);
-      border-right: 1px solid #252525;
+      width: var(--sidebar-width);
+      background: var(--sidebar);
+      backdrop-filter: var(--blur);
+      border-right: 1px solid var(--border);
       z-index: 1000;
-      transition: all 0.4s ease;
-      padding: 40px 20px;
+      padding: 32px 24px;
+      display: flex;
+      flex-direction: column;
       overflow-y: auto;
     }
 
     .sidebar-header {
-      text-align: center;
-      margin-bottom: 60px;
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 48px;
+      padding-bottom: 24px;
+      border-bottom: 1px solid rgba(255,255,255,0.06);
     }
 
-    .sidebar-header h1 {
-      font-size: 1.9rem;
-      color: var(--accent);
-      font-weight: 700;
+    .avatar {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid var(--accent);
+      box-shadow: 0 0 20px rgba(0,255,157,0.25);
+    }
+
+    .user-info h2 {
+      font-size: 1.35rem;
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .user-status {
+      font-size: 0.9rem;
+      color: var(--muted);
+    }
+
+    .menu-title {
+      font-size: 0.95rem;
+      color: var(--muted);
+      margin: 24px 0 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.8px;
     }
 
     .nav-list {
@@ -60,82 +92,79 @@
     }
 
     .nav-list li {
-      margin: 16px 0;
+      margin: 4px 0;
     }
 
     .nav-list a {
-      color: var(--text-muted);
+      color: var(--text);
       text-decoration: none;
       font-size: 1.05rem;
       display: flex;
       align-items: center;
-      gap: 14px;
+      gap: 16px;
       padding: 12px 16px;
       border-radius: 10px;
       position: relative;
-      transition: all 0.3s;
+      transition: all 0.25s ease;
     }
 
-    .nav-list a::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      bottom: 0;
-      width: 4px;
-      background: var(--accent);
-      transform: scaleY(0);
-      transition: transform 0.3s;
-      border-radius: 0 4px 4px 0;
+    .nav-list a:hover {
+      background: rgba(0,255,157,0.08);
+    }
+
+    .nav-list a.active {
+      background: rgba(0,255,157,0.12);
+      color: white;
+      font-weight: 500;
     }
 
     .nav-list a.active::before,
     .nav-list a:hover::before {
-      transform: scaleY(1);
+      content: '';
+      position: absolute;
+      left: -24px;
+      top: 0;
+      bottom: 0;
+      width: 4px;
+      background: var(--accent);
+      border-radius: 0 4px 4px 0;
     }
 
-    .nav-list a.active,
-    .nav-list a:hover {
-      color: white;
-      background: rgba(0,212,192,0.08);
-    }
-
-    .nav-list .icon {
+    .nav-icon {
       font-size: 1.4rem;
-      width: 28px;
+      width: 24px;
       text-align: center;
+      opacity: 0.9;
     }
 
-    /* Mobile behavior */
-    @media (max-width: 1023px) {
-      .sidebar {
-        width: 80px;
-        padding: 20px 8px;
-        align-items: center;
-      }
-
-      .sidebar-header h1 { font-size: 1.3rem; margin-bottom: 40px; }
-      .nav-list a { flex-direction: column; gap: 6px; padding: 12px 8px; font-size: 0.85rem; }
-      .nav-list .icon { font-size: 1.6rem; width: auto; }
-      main { margin-left: 80px; }
+    .nav-badge {
+      margin-left: auto;
+      background: rgba(0,255,157,0.15);
+      color: var(--accent);
+      font-size: 0.75rem;
+      padding: 2px 8px;
+      border-radius: 999px;
     }
 
     /* Main content */
     main {
-      margin-left: 280px;
+      margin-left: var(--sidebar-width);
       padding: 40px;
       min-height: 100vh;
     }
 
-    @media (max-width: 1023px) {
-      main { margin-left: 80px; padding: 20px; }
+    section { padding: 120px 0; max-width: 1200px; margin: 0 auto; }
+    h2 { font-size: 3.2rem; text-align: center; color: white; margin-bottom: 3rem; }
+
+    /* Your other sections (About, Education, etc.) go here */
+    .glass-card {
+      background: var(--card);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 32px;
+      box-shadow: var(--shadow);
     }
-
-    /* Hero & other sections remain the same – just make sure they exist */
-    section { padding: 120px 0; }
-    h2 { font-size: 3.4rem; text-align: center; color: white; margin-bottom: 3.5rem; }
-
-    /* Rest of your styles (cards, timeline, tech grid, etc.) go here */
   </style>
 </head>
 <body>
@@ -143,34 +172,61 @@
 <!-- Sidebar Navigation -->
 <div class="sidebar">
   <div class="sidebar-header">
-    <h1>Marc</h1>
+    <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru" class="avatar">
+    <div class="user-info">
+      <h2>Marc Wanjeru</h2>
+      <div class="user-status">Good day 🛡️</div>
+    </div>
   </div>
 
+  <div class="menu-title">Menu</div>
   <ul class="nav-list">
-    <li><a href="#home" class="active"><span class="icon">🏠</span>Home</a></li>
-    <li><a href="#about"><span class="icon">👤</span>About</a></li>
-    <li><a href="#education"><span class="icon">🎓</span>Education</a></li>
-    <li><a href="#certifications"><span class="icon">🏆</span>Certifications</a></li>
-    <li><a href="#journey"><span class="icon">💼</span>Journey</a></li>
-    <li><a href="#services"><span class="icon">🛠️</span>Services</a></li>
-    <li><a href="#technologies"><span class="icon">🔧</span>Technologies</a></li>
-    <li><a href="#projects"><span class="icon">🚀</span>Projects</a></li>
-    <li><a href="#contact"><span class="icon">✉️</span>Contact</a></li>
+    <li><a href="#home" class="active"><span class="nav-icon">🏠</span>Home</a></li>
+    <li><a href="#about"><span class="nav-icon">👤</span>About Me</a></li>
+    <li><a href="#education"><span class="nav-icon">🎓</span>Education</a></li>
+    <li><a href="#certifications"><span class="nav-icon">🏆</span>Certifications</a></li>
+    <li><a href="#journey"><span class="nav-icon">💼</span>Journey</a></li>
+    <li><a href="#services"><span class="nav-icon">🛠️</span>Services</a></li>
+    <li><a href="#technologies"><span class="nav-icon">🔧</span>Technologies</a></li>
+    <li><a href="#projects"><span class="nav-icon">🚀</span>Projects</a></li>
+    <li><a href="#contact"><span class="nav-icon">✉️</span>Contact</a></li>
   </ul>
+
+  <!-- Optional: Add Services / Settings blocks like in screenshot -->
+  <div class="menu-title" style="margin-top: 48px;">Services</div>
+  <div class="glass-card" style="padding: 16px; margin-bottom: 24px;">
+    <div style="display: flex; flex-direction: column; gap: 12px;">
+      <div style="display: flex; align-items: center; gap: 12px;">
+        <div style="font-size: 1.6rem;">🔷</div>
+        <span>Jira Software</span>
+      </div>
+      <div style="display: flex; align-items: center; gap: 12px;">
+        <div style="font-size: 1.6rem;">💬</div>
+        <span>Slack</span>
+      </div>
+      <div style="display: flex; align-items: center; gap: 12px;">
+        <div style="font-size: 1.6rem;">📞</div>
+        <span>Intercom</span>
+      </div>
+      <div style="color: var(--accent); cursor: pointer;">+ Add new service</div>
+    </div>
+  </div>
 </div>
 
 <main>
-  <!-- Your existing sections go here -->
-  <section id="home">…</section>
-  <section id="about">…</section>
-  <section id="education">…</section>
-  <section id="certifications">…</section>
-  <section id="journey">…</section>
-  <!-- etc. -->
+  <!-- Hero / Home -->
+  <section id="home">
+    <h1 style="font-size: 6rem; text-align: center; margin-top: 20vh; color: white;">Hello</h1>
+    <p style="text-align: center; font-size: 1.8rem; color: var(--text-muted);">I'm Marc Wanjeru — IT Systems & Cybersecurity Specialist</p>
+  </section>
+
+  <!-- Your other sections here: About, Education, Certifications, Journey, Services, Technologies, Projects, Contact -->
+  <!-- Just copy-paste them inside <main> -->
+
 </main>
 
 <script>
-// Highlight active section on scroll
+// Active link highlight on scroll
 const sections = document.querySelectorAll("section[id]");
 const navLinks = document.querySelectorAll(".nav-list a");
 
@@ -187,7 +243,7 @@ const observer = new IntersectionObserver(
       }
     });
   },
-  { threshold: 0.6, rootMargin: "-100px 0px -100px 0px" }
+  { threshold: 0.5 }
 );
 
 sections.forEach((section) => observer.observe(section));
