--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Marc Wanjeru — IT Systems & Cybersecurity Specialist</title>
-  <meta name="description" content="Marc Wanjeru — IT Systems & Cybersecurity Specialist based in Kampala, Uganda. Expert in Microsoft 365, Kaspersky, Sophos, network infrastructure & endpoint security."/>
-
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛡️</text></svg>">
+  <title>Marc Wanjeru — IT & Cybersecurity Specialist</title>
 
   <style>
     :root {
-      --bg: #0f0f0f;
-      --sidebar: #141414;
-      --card: rgba(30,30,30,0.85);
+      --bg: #0a0a0a;
+      --glass: rgba(20, 20, 25, 0.75);
       --border: rgba(255,255,255,0.06);
+      --blur: blur(16px);
       --text: #e0e0e0;
       --muted: #a0a0a0;
-      --accent: #00ff9d;     /* exact green from screenshot */
-      --accent-glow: rgba(0,255,157,0.18);
-      --blur: blur(16px);
-      --radius: 14px;
-      --shadow: 0 10px 40px rgba(0,0,0,0.7);
+      --accent: #00ff9d;          /* green active indicator from your reference */
+      --accent-glow: rgba(0,255,157,0.22);
+      --radius: 16px;
       --sidebar-width: 280px;
     }
 
-    * { margin:0; padding:0; box-sizing:border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background: var(--bg);
@@ -33,22 +33,23 @@
       overflow-x: hidden;
     }
 
-    /* ── Vertical Sidebar ── */
+    /* ── Vertical Sidebar (Bento-style) ── */
     .sidebar {
       position: fixed;
       left: 0;
       top: 0;
       bottom: 0;
       width: var(--sidebar-width);
-      background: var(--sidebar);
+      background: var(--glass);
       backdrop-filter: var(--blur);
       border-right: 1px solid var(--border);
+      padding: 40px 24px;
       z-index: 1000;
-      padding: 32px 24px;
-      display: flex;
-      flex-direction: column;
       overflow-y: auto;
+      scrollbar-width: none;          /* hide scrollbar Firefox */
     }
+
+    .sidebar::-webkit-scrollbar { display: none; }   /* hide scrollbar Chrome/Safari */
 
     .sidebar-header {
       display: flex;
@@ -56,7 +57,7 @@
       gap: 16px;
       margin-bottom: 48px;
       padding-bottom: 24px;
-      border-bottom: 1px solid rgba(255,255,255,0.06);
+      border-bottom: 1px solid var(--border);
     }
 
     .avatar {
@@ -69,9 +70,8 @@
     }
 
     .user-info h2 {
-      font-size: 1.35rem;
+      font-size: 1.4rem;
       font-weight: 600;
-      margin-bottom: 4px;
     }
 
     .user-status {
@@ -79,50 +79,44 @@
       color: var(--muted);
     }
 
-    .menu-title {
-      font-size: 0.95rem;
-      color: var(--muted);
-      margin: 24px 0 12px;
-      text-transform: uppercase;
-      letter-spacing: 0.8px;
+    /* Bento menu grid */
+    .bento-menu {
+      display: grid;
+      gap: 16px;
     }
 
-    .nav-list {
-      list-style: none;
-    }
-
-    .nav-list li {
-      margin: 4px 0;
-    }
-
-    .nav-list a {
-      color: var(--text);
-      text-decoration: none;
-      font-size: 1.05rem;
+    .bento-item {
+      background: rgba(30,30,35,0.6);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 20px 24px;
       display: flex;
       align-items: center;
       gap: 16px;
-      padding: 12px 16px;
-      border-radius: 10px;
+      color: var(--text);
+      text-decoration: none;
+      font-size: 1.05rem;
+      transition: all 0.3s ease;
+      cursor: pointer;
       position: relative;
-      transition: all 0.25s ease;
+      overflow: hidden;
     }
 
-    .nav-list a:hover {
-      background: rgba(0,255,157,0.08);
+    .bento-item:hover {
+      transform: translateY(-4px);
+      background: rgba(30,30,35,0.85);
+      box-shadow: 0 12px 32px rgba(0,255,157,0.15);
     }
 
-    .nav-list a.active {
+    .bento-item.active {
       background: rgba(0,255,157,0.12);
       color: white;
-      font-weight: 500;
     }
 
-    .nav-list a.active::before,
-    .nav-list a:hover::before {
+    .bento-item.active::before {
       content: '';
       position: absolute;
-      left: -24px;
+      left: 0;
       top: 0;
       bottom: 0;
       width: 4px;
@@ -130,20 +124,10 @@
       border-radius: 0 4px 4px 0;
     }
 
-    .nav-icon {
-      font-size: 1.4rem;
-      width: 24px;
+    .bento-icon {
+      font-size: 1.6rem;
+      width: 32px;
       text-align: center;
-      opacity: 0.9;
-    }
-
-    .nav-badge {
-      margin-left: auto;
-      background: rgba(0,255,157,0.15);
-      color: var(--accent);
-      font-size: 0.75rem;
-      padding: 2px 8px;
-      border-radius: 999px;
     }
 
     /* Main content */
@@ -153,97 +137,105 @@
       min-height: 100vh;
     }
 
-    section { padding: 120px 0; max-width: 1200px; margin: 0 auto; }
-    h2 { font-size: 3.2rem; text-align: center; color: white; margin-bottom: 3rem; }
+    section {
+      padding: 120px 0;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
 
-    /* Your other sections (About, Education, etc.) go here */
-    .glass-card {
-      background: var(--card);
-      backdrop-filter: var(--blur);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      padding: 32px;
-      box-shadow: var(--shadow);
+    h2 {
+      font-size: 3.4rem;
+      text-align: center;
+      margin-bottom: 3rem;
+      color: white;
     }
   </style>
 </head>
 <body>
 
-<!-- Sidebar Navigation -->
+<!-- Vertical Sidebar – Bento Menu -->
 <div class="sidebar">
   <div class="sidebar-header">
     <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru" class="avatar">
-    <div class="user-info">
+    <div>
       <h2>Marc Wanjeru</h2>
       <div class="user-status">Good day 🛡️</div>
     </div>
   </div>
 
-  <div class="menu-title">Menu</div>
-  <ul class="nav-list">
-    <li><a href="#home" class="active"><span class="nav-icon">🏠</span>Home</a></li>
-    <li><a href="#about"><span class="nav-icon">👤</span>About Me</a></li>
-    <li><a href="#education"><span class="nav-icon">🎓</span>Education</a></li>
-    <li><a href="#certifications"><span class="nav-icon">🏆</span>Certifications</a></li>
-    <li><a href="#journey"><span class="nav-icon">💼</span>Journey</a></li>
-    <li><a href="#services"><span class="nav-icon">🛠️</span>Services</a></li>
-    <li><a href="#technologies"><span class="nav-icon">🔧</span>Technologies</a></li>
-    <li><a href="#projects"><span class="nav-icon">🚀</span>Projects</a></li>
-    <li><a href="#contact"><span class="nav-icon">✉️</span>Contact</a></li>
-  </ul>
-
-  <!-- Optional: Add Services / Settings blocks like in screenshot -->
-  <div class="menu-title" style="margin-top: 48px;">Services</div>
-  <div class="glass-card" style="padding: 16px; margin-bottom: 24px;">
-    <div style="display: flex; flex-direction: column; gap: 12px;">
-      <div style="display: flex; align-items: center; gap: 12px;">
-        <div style="font-size: 1.6rem;">🔷</div>
-        <span>Jira Software</span>
-      </div>
-      <div style="display: flex; align-items: center; gap: 12px;">
-        <div style="font-size: 1.6rem;">💬</div>
-        <span>Slack</span>
-      </div>
-      <div style="display: flex; align-items: center; gap: 12px;">
-        <div style="font-size: 1.6rem;">📞</div>
-        <span>Intercom</span>
-      </div>
-      <div style="color: var(--accent); cursor: pointer;">+ Add new service</div>
-    </div>
+  <div class="bento-menu">
+    <a href="#home" class="bento-item active">
+      <span class="bento-icon">🏠</span>
+      Home
+    </a>
+    <a href="#about" class="bento-item">
+      <span class="bento-icon">👤</span>
+      About Me
+    </a>
+    <a href="#education" class="bento-item">
+      <span class="bento-icon">🎓</span>
+      Education
+    </a>
+    <a href="#certifications" class="bento-item">
+      <span class="bento-icon">🏆</span>
+      Certifications
+    </a>
+    <a href="#journey" class="bento-item">
+      <span class="bento-icon">💼</span>
+      Journey
+    </a>
+    <a href="#services" class="bento-item">
+      <span class="bento-icon">🛠️</span>
+      Services
+    </a>
+    <a href="#technologies" class="bento-item">
+      <span class="bento-icon">🔧</span>
+      Technologies
+    </a>
+    <a href="#projects" class="bento-item">
+      <span class="bento-icon">🚀</span>
+      Projects
+    </a>
+    <a href="#contact" class="bento-item">
+      <span class="bento-icon">✉️</span>
+      Contact
+    </a>
   </div>
 </div>
 
+<!-- Main Content Area -->
 <main>
-  <!-- Hero / Home -->
+  <!-- We will fill this section by section -->
+
   <section id="home">
-    <h1 style="font-size: 6rem; text-align: center; margin-top: 20vh; color: white;">Hello</h1>
-    <p style="text-align: center; font-size: 1.8rem; color: var(--text-muted);">I'm Marc Wanjeru — IT Systems & Cybersecurity Specialist</p>
+    <h2>Home</h2>
+    <p style="text-align:center; font-size:1.5rem; color:var(--muted);">
+      (This is placeholder — next we can build the hero exactly how you want)
+    </p>
   </section>
 
-  <!-- Your other sections here: About, Education, Certifications, Journey, Services, Technologies, Projects, Contact -->
-  <!-- Just copy-paste them inside <main> -->
-
+  <!-- Other sections will go here one by one -->
 </main>
 
 <script>
-// Active link highlight on scroll
+// Highlight active menu item on scroll
 const sections = document.querySelectorAll("section[id]");
-const navLinks = document.querySelectorAll(".nav-list a");
+const menuItems = document.querySelectorAll(".bento-item");
 
 const observer = new IntersectionObserver(
   (entries) => {
     entries.forEach((entry) => {
       if (entry.isIntersecting) {
-        navLinks.forEach((link) => {
-          link.classList.remove("active");
-          if (link.getAttribute("href") === `#${entry.target.id}`) {
-            link.classList.add("active");
+        menuItems.forEach((item) => {
+          item.classList.remove("active");
+          if (item.getAttribute("href") === `#${entry.target.id}`) {
+            item.classList.add("active");
           }
         });
       }
     });
   },
-  { threshold: 0.5 }
+  { threshold: 0.6 }
 );
 
 sections.forEach((section) => observer.observe(section));
