--- a/index.html
+++ b/index.html
@@ -8,118 +8,117 @@
   <style>
     :root {
       --bg: #0a0a0a;
-      --glass: rgba(20, 20, 25, 0.75);
-      --border: rgba(255,255,255,0.06);
-      --blur: blur(16px);
-      --text: #e0e0e0;
-      --muted: #a0a0a0;
-      --accent: #00ff9d;          /* green active indicator from your reference */
-      --accent-glow: rgba(0,255,157,0.22);
+      --glass: rgba(20, 20, 25, 0.78);
+      --border: rgba(255,255,255,0.08);
+      --blur: blur(18px);
+      --text: #e8e8e8;
+      --muted: #9e9e9e;
+      --accent: #00ff9d;
+      --accent-glow: rgba(0,255,157,0.25);
       --radius: 16px;
-      --sidebar-width: 280px;
+      --sidebar-width-collapsed: 90px;
+      --sidebar-width-expanded: 280px;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      font-family: system-ui, -apple-system, sans-serif;
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
       overflow-x: hidden;
     }
 
-    /* ── Vertical Sidebar (Bento-style) ── */
+    /* ── Vertical Bento Sidebar ── */
     .sidebar {
       position: fixed;
       left: 0;
       top: 0;
       bottom: 0;
-      width: var(--sidebar-width);
+      width: var(--sidebar-width-collapsed);
       background: var(--glass);
       backdrop-filter: var(--blur);
       border-right: 1px solid var(--border);
-      padding: 40px 24px;
       z-index: 1000;
-      overflow-y: auto;
-      scrollbar-width: none;          /* hide scrollbar Firefox */
+      padding: 32px 16px;
+      overflow: hidden;
+      transition: width 0.4s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    .sidebar::-webkit-scrollbar { display: none; }   /* hide scrollbar Chrome/Safari */
+    .sidebar.expanded {
+      width: var(--sidebar-width-expanded);
+      padding: 32px 24px;
+    }
 
     .sidebar-header {
       display: flex;
       align-items: center;
       gap: 16px;
       margin-bottom: 48px;
-      padding-bottom: 24px;
-      border-bottom: 1px solid var(--border);
-    }
-
-    .avatar {
-      width: 64px;
-      height: 64px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid var(--accent);
-      box-shadow: 0 0 20px rgba(0,255,157,0.25);
-    }
-
-    .user-info h2 {
-      font-size: 1.4rem;
-      font-weight: 600;
-    }
-
-    .user-status {
-      font-size: 0.9rem;
-      color: var(--muted);
-    }
-
-    /* Bento menu grid */
-    .bento-menu {
-      display: grid;
-      gap: 16px;
-    }
-
-    .bento-item {
-      background: rgba(30,30,35,0.6);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      padding: 20px 24px;
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      color: var(--text);
-      text-decoration: none;
-      font-size: 1.05rem;
-      transition: all 0.3s ease;
-      cursor: pointer;
-      position: relative;
+      white-space: nowrap;
       overflow: hidden;
     }
 
-    .bento-item:hover {
-      transform: translateY(-4px);
-      background: rgba(30,30,35,0.85);
-      box-shadow: 0 12px 32px rgba(0,255,157,0.15);
+    .avatar {
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid var(--accent);
+      box-shadow: 0 0 20px var(--accent-glow);
+      flex-shrink: 0;
     }
 
+    .user-name {
+      font-size: 1.3rem;
+      font-weight: 600;
+      opacity: 0;
+      transform: translateX(20px);
+      transition: all 0.4s ease;
+    }
+
+    .sidebar.expanded .user-name {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    .bento-menu {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .bento-item {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      padding: 14px 16px;
+      border-radius: var(--radius);
+      background: rgba(30,30,35,0.6);
+      border: 1px solid var(--border);
+      color: var(--text);
+      text-decoration: none;
+      cursor: pointer;
+      transition: all 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+      position: relative;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+
+    .bento-item:hover,
     .bento-item.active {
       background: rgba(0,255,157,0.12);
-      color: white;
+      transform: translateX(8px);
+      box-shadow: 0 8px 24px rgba(0,255,157,0.18);
     }
 
     .bento-item.active::before {
       content: '';
       position: absolute;
-      left: 0;
+      left: -24px;
       top: 0;
       bottom: 0;
-      width: 4px;
+      width: 5px;
       background: var(--accent);
       border-radius: 0 4px 4px 0;
     }
@@ -128,108 +127,142 @@
       font-size: 1.6rem;
       width: 32px;
       text-align: center;
+      flex-shrink: 0;
+    }
+
+    .bento-label {
+      opacity: 0;
+      transform: translateX(-20px);
+      transition: all 0.4s ease;
+    }
+
+    .sidebar.expanded .bento-label {
+      opacity: 1;
+      transform: translateX(0);
     }
 
     /* Main content */
     main {
-      margin-left: var(--sidebar-width);
+      margin-left: var(--sidebar-width-collapsed);
       padding: 40px;
+      transition: margin-left 0.4s cubic-bezier(0.4, 0, 0.2, 1);
       min-height: 100vh;
+    }
+
+    .sidebar.expanded + main {
+      margin-left: var(--sidebar-width-expanded);
     }
 
     section {
       padding: 120px 0;
-      max-width: 1200px;
+      max-width: 1100px;
       margin: 0 auto;
     }
 
     h2 {
-      font-size: 3.4rem;
+      font-size: 3.2rem;
       text-align: center;
       margin-bottom: 3rem;
       color: white;
+    }
+
+    .glass-card {
+      background: rgba(30,30,35,0.6);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 32px;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
     }
   </style>
 </head>
 <body>
 
-<!-- Vertical Sidebar – Bento Menu -->
-<div class="sidebar">
+<!-- Vertical Bento Sidebar -->
+<div class="sidebar" id="sidebar">
   <div class="sidebar-header">
     <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru" class="avatar">
-    <div>
-      <h2>Marc Wanjeru</h2>
-      <div class="user-status">Good day 🛡️</div>
-    </div>
+    <span class="user-name">Marc Wanjeru</span>
   </div>
 
   <div class="bento-menu">
     <a href="#home" class="bento-item active">
-      <span class="bento-icon">🏠</span>
-      Home
+      <span class="bento-icon">⌂</span>
+      <span class="bento-label">Home</span>
     </a>
     <a href="#about" class="bento-item">
       <span class="bento-icon">👤</span>
-      About Me
+      <span class="bento-label">About Me</span>
     </a>
     <a href="#education" class="bento-item">
       <span class="bento-icon">🎓</span>
-      Education
-    </a>
-    <a href="#certifications" class="bento-item">
-      <span class="bento-icon">🏆</span>
-      Certifications
+      <span class="bento-label">Education Timeline</span>
     </a>
     <a href="#journey" class="bento-item">
       <span class="bento-icon">💼</span>
-      Journey
-    </a>
-    <a href="#services" class="bento-item">
-      <span class="bento-icon">🛠️</span>
-      Services
-    </a>
-    <a href="#technologies" class="bento-item">
-      <span class="bento-icon">🔧</span>
-      Technologies
+      <span class="bento-label">Professional Journey</span>
     </a>
     <a href="#projects" class="bento-item">
-      <span class="bento-icon">🚀</span>
-      Projects
+      <span class="bento-icon">📁</span>
+      <span class="bento-label">Projects</span>
+    </a>
+    <a href="#technologies" class="bento-item">
+      <span class="bento-icon">&lt;/&gt;</span>
+      <span class="bento-label">Technologies</span>
+    </a>
+    <a href="#services" class="bento-item">
+      <span class="bento-icon">⚙</span>
+      <span class="bento-label">Services</span>
     </a>
     <a href="#contact" class="bento-item">
-      <span class="bento-icon">✉️</span>
-      Contact
+      <span class="bento-icon">✉</span>
+      <span class="bento-label">Contact Page</span>
+    </a>
+    <a href="#settings" class="bento-item">
+      <span class="bento-icon">⚙</span>
+      <span class="bento-label">Settings</span>
     </a>
   </div>
 </div>
 
-<!-- Main Content Area -->
+<!-- Main Content -->
 <main>
-  <!-- We will fill this section by section -->
-
-  <section id="home">
-    <h2>Home</h2>
-    <p style="text-align:center; font-size:1.5rem; color:var(--muted);">
-      (This is placeholder — next we can build the hero exactly how you want)
-    </p>
-  </section>
-
-  <!-- Other sections will go here one by one -->
+  <!-- Placeholder sections — we will build them one by one -->
+  <section id="home"><div class="glass-card"><h2>Home</h2><p>Coming next...</p></div></section>
+  <section id="about"><div class="glass-card"><h2>About Me</h2><p>Coming next...</p></div></section>
+  <section id="education"><div class="glass-card"><h2>Education Timeline</h2><p>Coming next...</p></div></section>
+  <section id="journey"><div class="glass-card"><h2>Professional Journey</h2><p>Coming next...</p></div></section>
+  <section id="projects"><div class="glass-card"><h2>Projects</h2><p>Coming next...</p></div></section>
+  <section id="technologies"><div class="glass-card"><h2>Technologies</h2><p>Coming next...</p></div></section>
+  <section id="services"><div class="glass-card"><h2>Services</h2><p>Coming next...</p></div></section>
+  <section id="contact"><div class="glass-card"><h2>Contact Page</h2><p>Coming next...</p></div></section>
+  <section id="settings"><div class="glass-card"><h2>Settings</h2><p>Coming next...</p></div></section>
 </main>
 
 <script>
-// Highlight active menu item on scroll
-const sections = document.querySelectorAll("section[id]");
-const menuItems = document.querySelectorAll(".bento-item");
+// Expand sidebar on hover
+const sidebar = document.getElementById('sidebar');
+
+sidebar.addEventListener('mouseenter', () => {
+  sidebar.classList.add('expanded');
+});
+
+sidebar.addEventListener('mouseleave', () => {
+  sidebar.classList.remove('expanded');
+});
+
+// Active link highlight on scroll
+const sections = document.querySelectorAll('section[id]');
+const bentoItems = document.querySelectorAll('.bento-item');
 
 const observer = new IntersectionObserver(
   (entries) => {
-    entries.forEach((entry) => {
+    entries.forEach(entry => {
       if (entry.isIntersecting) {
-        menuItems.forEach((item) => {
-          item.classList.remove("active");
-          if (item.getAttribute("href") === `#${entry.target.id}`) {
-            item.classList.add("active");
+        bentoItems.forEach(item => {
+          item.classList.remove('active');
+          if (item.getAttribute('href') === `#${entry.target.id}`) {
+            item.classList.add('active');
           }
         });
       }
@@ -238,7 +271,7 @@ const observer = new IntersectionObserver(
   { threshold: 0.6 }
 );
 
-sections.forEach((section) => observer.observe(section));
+sections.forEach(section => observer.observe(section));
 </script>
 
 </body>
